--- a/package.json
+++ b/package.json
@@ -11,15 +11,22 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@apollo/server": "^4.12.2",
     "apollo-server": "^3.13.0",
+    "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
+    "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.5.0",
+    "express": "^4.21.2",
     "graphql": "^16.11.0",
     "graphql-type-json": "^0.3.2",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.1",
     "nodemon": "^3.1.10",
-    "sequelize": "^6.37.7"
+    "sequelize": "^6.37.7",
+    "uuid": "^11.1.0"
   }
 }
